--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <!-- Configurações padrão do cabeçalho -->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=2.0">
-  <title>Questionáveis Melhores Filmes</title>
+  <title>Questionáveis Melhores Filmes e Series</title>
   <!-- Vínculo ao arquivo de estilo externo (substitua pelo caminho correto) -->
   <link rel="stylesheet" href="seu_estilo.css">
 
@@ -21,7 +21,7 @@
   <div class="container">
     <!-- Título da página -->
     <h1 class="page-title">
-      Questionáveis Melhores Filmes
+      Questionáveis Melhores Filmes e Series
 
       <div class="filmes">
   <!-- Cada filme agora está envolto em uma div com a classe "filme-container" -->
